src/main/java/com/example/backend/common/error/Errors.java
package com.example.backend.common.error;

public class Errors {
}
